--- a/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
+++ b/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
@@ -45,15 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComRefactorr\ComManagement\TypeLibs\TypeLibInternalWrapper.cs" />
+    <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalWrapperCollection.cs" />
+    <Compile Include="ComRefactor\ComManagement\TypeLibs\TypeLibInternalWrapper.cs" />
     <Compile Include="Rubberduck\ComReflection\ComAlias.cs" />
     <Compile Include="Rubberduck\ComReflection\ComBase.cs" />
     <Compile Include="Rubberduck\ComReflection\ComCoClass.cs" />
     <Compile Include="Rubberduck\ComReflection\ComDocumentation.cs" />
-    <Compile Include="ComRefactorr\ComReflection\ComLibrary.cs" />
-    <Compile Include="ComRefactorr\Program.cs" />
+    <Compile Include="ComRefactor\ComReflection\ComLibrary.cs" />
+    <Compile Include="ComRefactor\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ComRefactorr\ComReflection\IComLibrary.cs" />
+    <Compile Include="ComRefactor\ComReflection\IComLibrary.cs" />
     <Compile Include="Rubberduck\ComReflection\ComEnumeration.cs" />
     <Compile Include="Rubberduck\ComReflection\ComEnumerationMember.cs" />
     <Compile Include="Rubberduck\ComReflection\ComField.cs" />
