Update Program.cs to use RD ComProject
The Rubberduck ComProject class provides the type library structure required for a COM TypeLib
Some properties maybe required to added.
Are there methods to search the ComProject to find the required Com object to parse to a VBA  Com wrapper?

--- a/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
+++ b/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComRefactor\ComManagement\TypeLibs\Utility\ComProjectDocumentationExtension.cs" />
+    <Compile Include="ComRefactor\ComReflection\ComLibraryInfo.cs" />
     <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalImplementedInterfacesCollection.cs" />
     <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalWrapperCollection.cs" />
     <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalWrapper.cs" />
