--- a/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
+++ b/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
@@ -63,10 +63,10 @@
     <Compile Include="ComRefactor\Notes\MyNotes.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleOptionExplicit.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleHeader.cs" />
+    <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleParameter.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\VBAComWrapper.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleHeaderAttributes.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleMethod.cs" />
-    <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleParameters.cs" />
     <Compile Include="Rubberduck\Parsing\ComReflection\ComLibraryProvider.cs" />
     <Compile Include="Rubberduck\Parsing\ComReflection\ComAlias.cs" />
     <Compile Include="Rubberduck\Parsing\ComReflection\ComBase.cs" />
