--- a/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
+++ b/C#/ComRefactorConsoleRDComponents/ComRefactorConsole.csproj
@@ -46,19 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Utility\ComProjectDocumentationExtension.cs" />
     <Compile Include="ComRefactor\ComReflection\ComLibraryInfo.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalImplementedInterfacesCollection.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalWrapperCollection.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeInfoInternalWrapper.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Abstract\ITypeLibInternalWrapper.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\InternalTypeApiFactory.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\TypeInfoInternalWrapper.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\TypeInfoInternalWrapperCollection.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\TypeLibInternalWrapper.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Unmanaged\ObjectHandleExtensions.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Unmanaged\GCHandleProvider.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\Utility\InternalTypeInfoDocumentationExtensions.cs" />
     <Compile Include="ComRefactor\ComReflection\ComProjectLibrary.cs" />
     <Compile Include="ComRefactor\Notes\MyNotes.cs" />
     <Compile Include="ComRefactor\Refactoring\CodeBuilder\VBA\CodeModuleOptionExplicit.cs" />
@@ -99,7 +87,6 @@
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\Abstract\ITypeInfoFunctionCollection.cs" />
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\Abstract\ITypeInfoInternal.cs" />
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\TypeInfoFunction.cs" />
-    <Compile Include="ComRefactor\ComManagement\TypeLibs\TypeInfoInternalImplementedInterfacesCollection.cs" />
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\Unmanged\AddressableVariables.cs" />
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\Unmanged\ComHelper.cs" />
     <Compile Include="Rubberduck\VBEditor\ComManagement\TypeLibs\Unmanged\ComPointer.cs" />
@@ -130,6 +117,10 @@
       <Version>4.5.5</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ComRefactor\ComManagement\TypeLibs\Abstract\" />
+    <Folder Include="ComRefactor\ComManagement\TypeLibs\Unmanaged\" />
+    <Folder Include="ComRefactor\ComManagement\TypeLibs\Utility\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
